<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/etxtEmailReg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etxt_Email"
            android:inputType="textEmailSubject"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="300dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etxt_Username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etxtPassReg"
            android:layout_width="300dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etxt_Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etxtPassRepeat"
            android:layout_width="300dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etxt_PasswordRepeat"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/chbDanceTeacher"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chb_DanceGroupTeacher" />

        <EditText
            android:id="@+id/etxtDanceGroupName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:ems="10"
            android:hint="@string/etxt_DanceGroupName"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etxtDanceGroupCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:ems="10"
            android:hint="@string/etxt_DanceGroupCategory"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvButton"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/btn_BackToLogin"
            android:textColor="@color/colorBlue"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/btnRegToLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Register"
            android:textColor="@color/colorBlack"
            android:layout_gravity="end"/>
    </LinearLayout>
</ScrollView>
