<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Calendar">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toobar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="8dp"
            android:text="@string/header_rehGraph"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/compactcalendar_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"
            android:layout_height="236dp"
            android:layout_marginTop="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:compactCalendarBackgroundColor="#ffffff"
            app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
            app:compactCalendarMultiEventIndicatorColor="#3232FF"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextColor="#000"
            app:compactCalendarTextSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/megLaiksText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_time"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMegLaiks"
                    android:layout_width="match_parent"
                    android:minHeight="68sp"
                    android:layout_height="match_parent"
                    android:background="#FFA500"
                    android:textColor="#fff"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/megGraphText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_graph"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMegGraph"
                    android:layout_width="match_parent"
                    android:minHeight="68sp"
                    android:layout_height="match_parent"
                    android:background="#800080"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/notesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_notes"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvNotes"
                    android:layout_width="match_parent"
                    android:minHeight="68sp"
                    android:layout_height="match_parent"
                    android:background="#3232FF"
                    android:textColor="#fff"/>

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"></android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>